--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -85,7 +85,7 @@
     <form class="text-form-category">
         <div class="recipeCategory">
             <select name="query">
-                <option disabled selected value="">Category</option>
+                <option disabled selected value="">Choose category</option>
                 <option th:each="categor : ${category}" th:text="${categor}"
                         th:value="${category}"></option>
             </select>
@@ -118,7 +118,7 @@
         </div>
     </form>
 
-    <button class="saveButton">Save</button>
+    <button class="saveButton" id="save-btn">Save</button>
     <button class="publishButton">Publish</button>
 </main>
 <footer class="footer">
@@ -176,6 +176,15 @@
     document.getElementById('cookingTimeInput').addEventListener('keydown', function (event) {
         if (event.key === '-' || event.key === '+') {
             event.preventDefault();
+        }
+    });
+
+
+    document.getElementById('save-btn').addEventListener('click', function () {
+        const selectedCategory = document.querySelector('select[name="query"]').value;
+
+        if (selectedCategory === "") {
+            alert("Please, choose a category of the recipe before saving.");
         }
     });
 </script>
