add default value to cooking time recipeCreation.html

--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -121,7 +121,7 @@
             </div>
         </div>
 
-        <button th:action="@{/api/newRecipe}" class="saveButton">Save</button>
+        <button class="saveButton">Save</button>
         <button class="publishButton">Publish</button>
     </form>
 
