--- a/src/main/resources/static/css/recipeCreation.css
+++ b/src/main/resources/static/css/recipeCreation.css
@@ -110,6 +110,7 @@
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.9vw;
     autocomplete: off;
+    outline: none;
 }
 
 .ingredientsField {
