--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -56,7 +56,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #B90F0F;
+    background-color: #733506;
 }
 
 ::-webkit-scrollbar-track {
