added text style for description of the user report

--- a/src/main/resources/static/css/reports.css
+++ b/src/main/resources/static/css/reports.css
@@ -75,6 +75,15 @@
     left: 22vw;
 }
 
+.reportText {
+    position: absolute;
+    text-align: left;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.8vw;
+    top: -2.5vh;
+    left: 1vw;
+}
+
 .informationField {
     position: absolute;
     width: 88vw;
