--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -211,24 +211,25 @@
             </table>
         </div>
     </div>
-    <form class="text-form" method="post"
-          onsubmit="return validateInput('commentInput')" th:action="@{/api/newComment/{id1}(id1=${id})}"
-          th:object="${comment}">
-        <img alt="quill" class="quill" src="../../static/images/quill.svg" th:src="@{../images/quill.svg}">
-        <textarea id="commentInput" maxlength="255" name="startWith" placeholder="Add comment"
-                  th:field="${comment.text}"></textarea>
-        <button id="publish" type="submit">Publish</button>
-    </form>
-    <div class="commentField">
-        <div th:class="'comment-container comment' + ${commentStat.count}"
-             th:each="comment, commentStat : ${recipe.getComments()}">
-            <div class="comment-user-circle">
-                <img alt="comment-user" class="comment-user" id="comment-user" src="../../images/Chef Hat.svg">
+    <div th:if="${isModerator} == false">
+        <form class="text-form" method="post"
+              onsubmit="return validateInput('commentInput')" th:action="@{/api/newComment/{id1}(id1=${id})}"
+              th:object="${comment}">
+            <img alt="quill" class="quill" src="../../static/images/quill.svg" th:src="@{../images/quill.svg}">
+            <textarea id="commentInput" maxlength="255" name="startWith" placeholder="Add comment"
+                      th:field="${comment.text}"></textarea>
+            <button id="publish" type="submit">Publish</button>
+        </form>
+        <div class="commentField">
+            <div th:class="'comment-container comment' + ${commentStat.count}"
+                 th:each="comment, commentStat : ${recipe.getComments()}">
+                <div class="comment-user-circle">
+                    <img alt="comment-user" class="comment-user" id="comment-user" src="../../images/Chef Hat.svg">
+                </div>
+                <div class="comment-text" th:text="${comment.getText()}"></div>
             </div>
-            <div class="comment-text" th:text="${comment.getText()}"></div>
         </div>
     </div>
-
     <div class="fullRecipe">
         <div class="fullRecipeHeader">Recipe</div>
         <div class="amountField">
