fixed font of recipes in favorite list

--- a/src/main/resources/static/css/headerIfooter.css
+++ b/src/main/resources/static/css/headerIfooter.css
@@ -440,3 +440,8 @@ body {
     margin-top: 1vh;
     font-weight: bold;
 }
+
+.favoriteLists-window a {
+    text-decoration: none;
+    color: inherit;
+}
