--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <!--<div id="overlay-favorite" onclick="hideOverlay()"></div>
+        <div id="overlay-favorite" onclick="hideOverlay()"></div>
         <div class="favoriteLists-window" id="favorite-popup-window">
             <div th:if="${favoriteList != null}">
                 <div th:each="recipe, i : ${favoriteList.getRecipeUserLists()}">
@@ -51,7 +51,7 @@
                     </button>
                 </div>
             </div>
-        </div>-->
+        </div>
 
         <button class="user-container" id="user-btn">
             <a th:href="@{/user}" th:if="${isLogin} == true">
@@ -188,6 +188,7 @@
 <script src="../../js/scripts.js" th:href="@{js/scripts.js}"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
+    document.getElementById("cookingTimeInput").value = "";
     $(document).ready(function () {
         $('#addIngredient').click(function () {
             let newRow = `<tr>
